--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "Cypress-Helper",
+  "name": "cypress-helper",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "cypress": "^8.5.0"
+    "cypress": "^8.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "cypress-multi-reporters": "^1.5.0",
+    "mocha": "^9.1.2",
+    "mochawesome": "^6.3.1",
+    "mochawesome-merge": "^4.2.0",
+    "mochawesome-report-generator": "^5.2.0",
+    "cypress-grep": "^2.5.3",
+    "fs-extra": "^10.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean:reports": "node ./cypress/reportDirSetup.js",
+    "pretest": "npm run clean:reports",
+    "test": "node ./cypress/testRunSetup.js",
+    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+    "posttest": "npm run combine-reports && npm run generate-report"
   },
   "repository": {
     "type": "git",
