--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.2.0",
     "cypress-grep": "^2.5.3",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "dotenv": "^10.0.0"
   },
   "scripts": {
     "clean:reports": "node ./cypress/reportDirSetup.js",
